--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "https://horizon-ui.com/horizon-ui-chakra-ts",
+	"homepage": "https://workman.app01.cn",
 	"name": "horizon-ui-chakra-typescript",
 	"version": "1.1.0",
 	"private": true,
