--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@types/react": "^18.0.15",
 		"@types/react-dom": "^18.0.6",
 		"apexcharts": "^3.35.2",
+		"axios": "^1.4.0",
 		"framer-motion": "^4.1.17",
 		"react": "^17.0.2",
 		"react-apexcharts": "^1.4.0",
@@ -30,7 +31,7 @@
 		"react-icons": "^4.3.1",
 		"react-is": "^18.0.0",
 		"react-router-dom": "^5.3.0",
-		"react-scripts": "5.0.0", 
+		"react-scripts": "5.0.0",
 		"stylis": "^4.1.1",
 		"stylis-plugin-rtl": "2.0.2",
 		"typescript": "^4.7.4",
@@ -64,7 +65,7 @@
 	},
 	"devDependencies": {
 		"@types/react-calendar": "^3.5.2",
-		"@types/react-router-dom": "^5.3.3", 
+		"@types/react-router-dom": "^5.3.3",
 		"gh-pages": "^3.2.3"
 	}
 }
